# RayTracer

./: CMakeLists.txt  README.md  camera.cpp  camera.h  intersection.h  main.cpp  ray.h  scene.cpp  scene.h  transforms.h
docs/: _config.yml  devlog.md  index.md
lights/: light.h
shapes/: cuboid.h  shape.h  sphere.h
utils/: material.h  progress_bar.h  utils.cpp  utils.h
